Fri Jan 21 12:00:42 CET 2005 Daniel Veillard <veillard@redhat.com>

	* README: small update
	* lib/dirmonitor.py: try to fix problem with older gnome-vfs bindings

2005-01-21  Mark McLoughlin  <mark@skynet.ie>

	* lib/userprofile.py: last few bits of the grand re-naming.
	
	* lib/storage-modules/mozillasource.py: disable for now.

Thu Jan 20 21:44:31 CET 2005 Daniel Veillard <veillard@redhat.com>

	* lib/dirmonitor.py: try to work around a portability problem
	  about gnome-vfs python module name
	* lib/util.py: added a routine print_exception() to display an exception

2005-01-20  Mark McLoughlin  <markmc@redhat.com>

	* lib/modules/gconfprofile.py: import errno module.

2005-01-20  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/monitorwindow.py: fix buglet.

2005-01-20  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/Makefile.am: install glade file
	in $pkgdatadir/glade, generate user-profile-admin.
	
	* admin-tool/user-profile-admin: remove.
	
	* admin-tool/user-profile-admin.in: add - generated
	now with correct prefix.
	
	* lib/Makefile.am: add some missing files, generate
	config.py.
	
	* lib/config.py: remove
	
	* lib/config.py.in: add - generates config.py.
	
	* lib/modules/Makefile.am: add filesprofile.py

Thu Jan 20 15:30:04 CET 2005 Daniel Veillard <veillard@redhat.com>

	* lib/README.package lib/package.py: added a get_directory() entry point
	* admin-tool/monitorwindow.py admin-tool/user-profile-admin.py:
	  moving profile file intialization down to UserProfile() init
	* lib/userprofile.py lib/modules/filesprofile.py 
	  lib/modules/gconfprofile.py lib/modules/testmodule.py: adding the
	  self.profile_storage coming from the storage module, replacing
	  bascially self.profile_path by self.profile_storage.get_directory().
	  The modules creation routines now take a storage object argument
	  instead of a storage path.
	  
2005-01-20  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/monitorwindow.py: add a mandatory toggle,