@@ -1,3 +1,8 @@
+Fri Jan 21 13:45:19 CET 2005 Daniel Veillard <veillard@redhat.com>
+
+	* lib/dirmonitor.py: do not explode when launched on a real user
+	  environment.
+
 Fri Jan 21 12:00:42 CET 2005 Daniel Veillard <veillard@redhat.com>
 
 	* README: small update
